<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="236dp"
        android:layout_height="191dp"
        android:layout_marginLeft="90dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginStart="90dp"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="140dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="140dp" />

    <TextView
        android:id="@+id/tv_welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="120dp"
        android:text="@string/appName"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="120dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_Lemail"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_Lpassword"
                android:inputType="textPassword"
                android:hint="@string/password"
                />
        </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/tv_Forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="560dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</RelativeLayout>

