<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/movie_poster"/>

            <TextView
                android:id="@+id/movieName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="28dp"
                android:text="@string/movie_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableList"
                android:layout_width="375dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster">

                <Button
                    android:id="@+id/movieDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="15sp"
                    android:text="@string/date"
                    app:backgroundTint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/movieDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="15sp"
                    android:text="@string/date"
                    app:backgroundTint="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/movieDate"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/movieDate3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="15sp"
                    android:text="@string/date"
                    app:backgroundTint="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/movieDate2"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/movieTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/time"
                    android:visibility="gone"
                    app:backgroundTint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movieDate" />

                <Button
                    android:id="@+id/movieTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/time"
                    android:visibility="gone"
                    app:backgroundTint="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/movieTime"
                    app:layout_constraintTop_toBottomOf="@+id/movieDate" />

                <Button
                    android:id="@+id/movieTime3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/time"
                    android:visibility="gone"
                    app:backgroundTint="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/movieTime2"
                    app:layout_constraintTop_toBottomOf="@+id/movieDate2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>